Update Java software model templates to use `module` instead of `dependencies.compile` when runtime is Gradle 2.10+